--- a/Expedition/Storyboards/Base.lproj/Main.storyboard
+++ b/Expedition/Storyboards/Base.lproj/Main.storyboard
@@ -813,7 +813,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="swipe up on the search bar for desktop website" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2KX-3A-6Oj">
-                                                            <rect key="frame" x="18" y="152" width="303" height="48"/>
+                                                            <rect key="frame" x="48.666666666666671" y="152" width="241.66666666666663" height="48"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="48" id="Bzp-Xs-ddp"/>
                                                             </constraints>
@@ -827,10 +827,10 @@
                                                     <constraints>
                                                         <constraint firstAttribute="bottom" secondItem="2KX-3A-6Oj" secondAttribute="bottom" constant="12" id="Jd6-pt-k1h"/>
                                                         <constraint firstItem="Ftc-WM-W0s" firstAttribute="centerX" secondItem="pQP-H7-FVX" secondAttribute="centerX" id="pa2-lX-Rrw"/>
-                                                        <constraint firstAttribute="trailing" secondItem="2KX-3A-6Oj" secondAttribute="trailing" constant="18" id="tef-jT-N19"/>
+                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2KX-3A-6Oj" secondAttribute="trailing" id="tef-jT-N19"/>
                                                         <constraint firstItem="2KX-3A-6Oj" firstAttribute="centerX" secondItem="pQP-H7-FVX" secondAttribute="centerX" id="wUR-ZR-VVy"/>
                                                         <constraint firstItem="2KX-3A-6Oj" firstAttribute="top" secondItem="Ftc-WM-W0s" secondAttribute="bottom" constant="16" id="wqf-fC-lZI"/>
-                                                        <constraint firstItem="2KX-3A-6Oj" firstAttribute="leading" secondItem="pQP-H7-FVX" secondAttribute="leading" constant="18" id="zEq-ei-Ofy"/>
+                                                        <constraint firstItem="2KX-3A-6Oj" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pQP-H7-FVX" secondAttribute="leading" id="zEq-ei-Ofy"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -861,7 +861,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="swipe down on the search bar to reload" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N4r-BM-tP1">
-                                                            <rect key="frame" x="18" y="152" width="303" height="48"/>
+                                                            <rect key="frame" x="14.333333333333343" y="152" width="310.33333333333326" height="48"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="48" id="Htk-TU-WBv"/>
                                                             </constraints>
@@ -873,11 +873,11 @@
                                                     <color key="backgroundColor" name="Elevated"/>
                                                     <gestureRecognizers/>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="N4r-BM-tP1" secondAttribute="trailing" constant="18" id="PLY-7y-8YM"/>
+                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="N4r-BM-tP1" secondAttribute="trailing" id="PLY-7y-8YM"/>
                                                         <constraint firstItem="N4r-BM-tP1" firstAttribute="top" secondItem="r3r-E2-UD8" secondAttribute="bottom" constant="16" id="UVu-2Z-yzV"/>
                                                         <constraint firstItem="N4r-BM-tP1" firstAttribute="centerX" secondItem="2mB-A9-sjs" secondAttribute="centerX" id="iNL-7d-Qae"/>
                                                         <constraint firstItem="r3r-E2-UD8" firstAttribute="centerX" secondItem="2mB-A9-sjs" secondAttribute="centerX" id="l1k-2h-OOX"/>
-                                                        <constraint firstItem="N4r-BM-tP1" firstAttribute="leading" secondItem="2mB-A9-sjs" secondAttribute="leading" constant="18" id="leJ-Ac-2IM"/>
+                                                        <constraint firstItem="N4r-BM-tP1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2mB-A9-sjs" secondAttribute="leading" id="leJ-Ac-2IM"/>
                                                         <constraint firstAttribute="bottom" secondItem="N4r-BM-tP1" secondAttribute="bottom" constant="12" id="p9c-D6-z7D"/>
                                                     </constraints>
                                                 </view>
@@ -909,7 +909,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="swipe right on the search bar for tabs" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aru-j4-iFG">
-                                                            <rect key="frame" x="18" y="152" width="303" height="48"/>
+                                                            <rect key="frame" x="23.666666666666657" y="152" width="291.66666666666674" height="48"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="48" id="bNe-Jy-oCB"/>
                                                             </constraints>
@@ -923,9 +923,9 @@
                                                     <constraints>
                                                         <constraint firstItem="aru-j4-iFG" firstAttribute="centerX" secondItem="sXb-bz-fDz" secondAttribute="centerX" id="1ej-Pn-iU6"/>
                                                         <constraint firstItem="aru-j4-iFG" firstAttribute="top" secondItem="YCE-Vk-3FP" secondAttribute="bottom" constant="16" id="2Oh-c8-Atf"/>
-                                                        <constraint firstItem="aru-j4-iFG" firstAttribute="leading" secondItem="sXb-bz-fDz" secondAttribute="leading" constant="18" id="YSy-76-6S3"/>
+                                                        <constraint firstItem="aru-j4-iFG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="sXb-bz-fDz" secondAttribute="leading" id="YSy-76-6S3"/>
                                                         <constraint firstAttribute="bottom" secondItem="aru-j4-iFG" secondAttribute="bottom" constant="12" id="ieU-k3-LdM"/>
-                                                        <constraint firstAttribute="trailing" secondItem="aru-j4-iFG" secondAttribute="trailing" constant="18" id="rjI-yT-Rma"/>
+                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="aru-j4-iFG" secondAttribute="trailing" id="rjI-yT-Rma"/>
                                                         <constraint firstItem="YCE-Vk-3FP" firstAttribute="centerX" secondItem="sXb-bz-fDz" secondAttribute="centerX" id="siM-iP-chh"/>
                                                     </constraints>
                                                 </view>
@@ -957,7 +957,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="swipe left on the search bar for bookmarks" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8a-pP-zvN">
-                                                            <rect key="frame" x="18" y="152" width="303" height="48"/>
+                                                            <rect key="frame" x="2.3333333333333428" y="152" width="334.33333333333326" height="48"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="48" id="q1Y-z1-PGu"/>
                                                             </constraints>
@@ -970,9 +970,9 @@
                                                     <gestureRecognizers/>
                                                     <constraints>
                                                         <constraint firstItem="j8a-pP-zvN" firstAttribute="top" secondItem="CKZ-cO-iMB" secondAttribute="bottom" constant="16" id="80J-yC-wdS"/>
-                                                        <constraint firstItem="j8a-pP-zvN" firstAttribute="leading" secondItem="3lT-Za-JkJ" secondAttribute="leading" constant="18" id="JkC-Ks-1Jt"/>
+                                                        <constraint firstItem="j8a-pP-zvN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="3lT-Za-JkJ" secondAttribute="leading" id="JkC-Ks-1Jt"/>
                                                         <constraint firstItem="j8a-pP-zvN" firstAttribute="centerX" secondItem="3lT-Za-JkJ" secondAttribute="centerX" id="L5H-wq-uNb"/>
-                                                        <constraint firstAttribute="trailing" secondItem="j8a-pP-zvN" secondAttribute="trailing" constant="18" id="OMb-YV-X1r"/>
+                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="j8a-pP-zvN" secondAttribute="trailing" id="OMb-YV-X1r"/>
                                                         <constraint firstItem="CKZ-cO-iMB" firstAttribute="centerX" secondItem="3lT-Za-JkJ" secondAttribute="centerX" id="a7w-O0-nVq"/>
                                                         <constraint firstAttribute="bottom" secondItem="j8a-pP-zvN" secondAttribute="bottom" constant="12" id="klM-bb-XwC"/>
                                                     </constraints>
@@ -1005,7 +1005,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tap with three fingers to share" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kbt-Zr-LwP">
-                                                            <rect key="frame" x="18" y="152" width="303" height="48"/>
+                                                            <rect key="frame" x="52.000000000000014" y="152" width="235.33333333333337" height="48"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="48" id="rW1-fp-ar6"/>
                                                             </constraints>
@@ -1018,10 +1018,10 @@
                                                     <gestureRecognizers/>
                                                     <constraints>
                                                         <constraint firstItem="kbt-Zr-LwP" firstAttribute="top" secondItem="Jay-20-PSJ" secondAttribute="bottom" constant="16" id="1G3-vF-Akr"/>
-                                                        <constraint firstAttribute="trailing" secondItem="kbt-Zr-LwP" secondAttribute="trailing" constant="18" id="4Tj-Hm-9fn"/>
+                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kbt-Zr-LwP" secondAttribute="trailing" id="4Tj-Hm-9fn"/>
                                                         <constraint firstAttribute="bottom" secondItem="kbt-Zr-LwP" secondAttribute="bottom" constant="12" id="QeV-3D-hcc"/>
                                                         <constraint firstItem="Jay-20-PSJ" firstAttribute="centerX" secondItem="M8x-56-p9d" secondAttribute="centerX" id="Wyr-w1-96W"/>
-                                                        <constraint firstItem="kbt-Zr-LwP" firstAttribute="leading" secondItem="M8x-56-p9d" secondAttribute="leading" constant="18" id="XbR-hJ-8wa"/>
+                                                        <constraint firstItem="kbt-Zr-LwP" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="M8x-56-p9d" secondAttribute="leading" id="XbR-hJ-8wa"/>
                                                         <constraint firstItem="kbt-Zr-LwP" firstAttribute="centerX" secondItem="M8x-56-p9d" secondAttribute="centerX" id="bKC-U4-XpW"/>
                                                     </constraints>
                                                 </view>
@@ -4051,7 +4051,7 @@ We do not collect any data or personal information in Expedition. We simply do n
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="ZSA-bk-FWN"/>
+        <segue reference="9zN-fo-Gck"/>
         <segue reference="fQc-WF-jgl"/>
         <segue reference="tOY-Um-AMB"/>
     </inferredMetricsTieBreakers>
