--- a/Expedition/Resources/style.css
+++ b/Expedition/Resources/style.css
@@ -9,7 +9,40 @@ body {
 .title {
     position: absolute; top: 150px; left: 50%; transform: translate(-50%, -50%); font-size: 34px; font-family: 'Avenir Next', sans-serif; font-weight: bold; font-style: normal; text-align: center; vertical-align: middle; background: linear-gradient(to right, color(display-p3 0.19 0.43 0.89), color(display-p3 0 0.65 0.89)); border-radius: 25px; height: 225px; width: 90%; display: flex; align-items: center; justify-content: center; color: white; padding: 25px; box-sizing: border-box;
 }
-
+#icon {
+    width: 60pt; height: 60pt;
+    position: absolute;
+    top: 35px;
+}
+#titletext {
+    position: absolute;
+    top: 110px;
+}
+#btn {
+    all: unset;
+    position: absolute;
+    display: flex;
+     align-items: center;
+     justify-content: center;
+     text-align: center;
+     transform: translate(-50%, -50%);
+     bottom: 20px;
+     left: 50%;
+     cursor: pointer;
+     width: 90%;
+     height: 55px;
+     color: white;
+     background-color: color(display-p3 0.16 0.54 0.8);
+     border-radius: 20px;
+     font-family: "Avenir Next", sans-serif;
+     font-weight: 500;
+     font-size: 17px;
+     text-indent: 7px;
+     background-image: url("back.svg");
+     background-size: 20px 20px;
+     background-repeat: no-repeat;
+     background-position: 32% 50%;
+}
 
 @media(prefers-color-scheme: dark) {
     body {
